# trae_controller

./: .gitignore  AGENTS.md  AI_CONTEXT.md  READ.me  README_ENHANCED.md  _tmp_diff.txt  _tmp_settings.txt  _tmp_settings_current.txt  _tmp_temp_unit.txt  compile_commands.json  debug-add-step-lag.md  debug-calibration-nav-wdt.md  debug-program-delete-freeze.md  debug-program-graph-crop.md  debug-program-save-time.md  debug-programs-edit-memory.md  debug-settings-calibration-race.md  debug-settings-calibration-wdt.md  debug-settings-entry-lag.md  debug-settings-errors-wdt.md  debug-settings-freeze-wdt.md  debug-settings-history-panic.md  debug-settings-history-switch-wdt.md  debug-settings-history-wdt.md  debug-settings-section-crash.md  debug-settings-swdraw-wdt.md  debug-settings-wdt-freeze.md  debug-touch-no-response.md  debug-touch-unresponsive.md  debug-ui-freeze-monitor.md  diagram.json  memory.md  package-lock.json  package.json  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32s3-n16r8  wiring_scheme.md
firmware/components/slint_ui/: CMakeLists.txt  slint_ui_dummy.c
firmware/components/slint_ui/include/: slint_ui.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  LGFX_Setup.cpp  display_driver.cpp  idf_component.yml  main.cpp  thermal_control.cpp  ui_manager.cpp  wifi_connection.cpp  wifi_server.cpp
firmware/main/app/: app_main.cpp  board_profile.cpp  device_commands.cpp
firmware/main/drivers/: buzzer_driver.cpp  display_driver.cpp  fan_driver.cpp  pzem004t_driver.cpp  rtc_ds3231.cpp
firmware/main/include/: MAX6675.h  config.h  display_driver.h  lv_conf.h  lv_conf.h.lvgl_backup_2026-03-15  thermal_control.h  wifi_connection.h  wifi_server.h
firmware/main/include/app/: device_commands.h
firmware/main/include/config/: board_profile.h
firmware/main/include/drivers/: buzzer_driver.h  display_driver.h  fan_driver.h  pzem004t_driver.h  rtc_ds3231.h
firmware/main/include/net/: dns_server.h  remote_access.h  wifi_connection.h  wifi_connection_c.h  wifi_server.h
firmware/main/include/ui/: lvgl_mem.h  slint_bridge.h  ui_backend.h
firmware/main/net/: dns_server.cpp  remote_access.cpp  wifi_connection.cpp  wifi_server.cpp  wifi_server_backup.cpp  wifi_server_fan.cpp  wifi_server_history.cpp  wifi_server_ota.cpp  wifi_server_pid.cpp  wifi_server_remote.cpp  wifi_server_settings.cpp  wifi_server_touch.cpp
firmware/main/ui/: UI_ARCHITECTURE.md  lvgl_backend.cpp  lvgl_mem.c  screen_header.h  screens.h  slint_bridge.cpp  theme.cpp  theme.h  ui_backend.cpp  ui_images_bridge.c
firmware/main/ui/picopixel/: actions.h  images.h  screens.c  screens.h  ui.c
firmware/main/ui/picopixel/fonts/: font_4305a60a491c803d80080d00155e1160.c  font_4305a60a491c803d80080d011b20aec8.c  font_4305a60a491c803d80080d0276f8a0f7.c  font_4305a60a491c803d80080d0337447350.c  font_4305a60a491c803d80080d08108ddeb9.c  fonts.h
firmware/main/ui/picopixel/images/: free_icon_electrocardiogram_8011473_png.c  free_icon_play_button_arrowhead_27223_png.c  free_icon_right_arrow_271228_png.c  free_icon_speedometer_251043_png.c  free_icon_thunder_2682835_png.c  free_icon_transformer_2804080_png.c  music_14073594_png.c  pngwing_com_1_png.c  pngwing_com_png.c
firmware/main/ui/picopixel/lvgl/: lvgl.h
firmware/main/ui/screens/: screen_boot.cpp  screen_header.cpp  screen_main.cpp  screen_program_edit.cpp  screen_programs.cpp  screen_settings.cpp
firmware/slint_ui/: Cargo.toml  build.rs
firmware/slint_ui/src/: lib.rs
firmware/slint_ui/target_preview/: .rustc_info.json
firmware/slint_ui/target_preview/debug/.fingerprint/adler2-8259a2e4bd817b02/: lib-adler2  lib-adler2.json
firmware/slint_ui/target_preview/debug/.fingerprint/aligned-0b87239973b240f4/: lib-aligned  lib-aligned.json
firmware/slint_ui/target_preview/debug/.fingerprint/aligned-vec-b7f08f16dcd22166/: lib-aligned_vec  lib-aligned_vec.json
firmware/slint_ui/target_preview/debug/.fingerprint/allocator-api2-fc55884e2777267d/: lib-allocator_api2  lib-allocator_api2.json
firmware/slint_ui/target_preview/debug/.fingerprint/anyhow-30aac445212ab363/: build-script-build-script-build  build-script-build-script-build.json
firmware/slint_ui/target_preview/debug/.fingerprint/anyhow-740850ac1ff9fab5/: run-build-script-build-script-build  run-build-script-build-script-build.json
firmware/slint_ui/target_preview/debug/.fingerprint/anyhow-b862ba688e7328bf/: lib-anyhow  lib-anyhow.json
firmware/slint_ui/target_preview/debug/.fingerprint/arg_enum_proc_macro-4ca3e4180086c29c/: lib-arg_enum_proc_macro  lib-arg_enum_proc_macro.json
firmware/slint_ui/target_preview/debug/.fingerprint/arrayref-1cdd22f3cf140d5c/: lib-arrayref  lib-arrayref.json
firmware/slint_ui/target_preview/debug/.fingerprint/arrayvec-bfb541260a4297d2/: lib-arrayvec  lib-arrayvec.json
firmware/slint_ui/target_preview/debug/.fingerprint/arrayvec-de4637f7dafa370c/: lib-arrayvec  lib-arrayvec.json
firmware/slint_ui/target_preview/debug/.fingerprint/as-slice-ffdf6e64ed72aa16/: lib-as_slice  lib-as_slice.json
firmware/slint_ui/target_preview/debug/.fingerprint/autocfg-c9681d1f4a0c97ef/: lib-autocfg  lib-autocfg.json
firmware/slint_ui/target_preview/debug/.fingerprint/av-scenechange-02d07311b6746af2/: build-script-build-script-build  build-script-build-script-build.json
firmware/slint_ui/target_preview/debug/.fingerprint/av-scenechange-38ec203b232f5151/: lib-av_scenechange  lib-av_scenechange.json
firmware/slint_ui/target_preview/debug/.fingerprint/av-scenechange-e7ca1b263b693fd2/: run-build-script-build-script-build  run-build-script-build-script-build.json
firmware/slint_ui/target_preview/debug/.fingerprint/av1-grain-a6cb380ceb5beca1/: lib-av1_grain  lib-av1_grain.json
firmware/slint_ui/target_preview/debug/.fingerprint/base64-d94a89a2cc618e0b/: lib-base64  lib-base64.json
firmware/slint_ui/ui/: app.slint
main/: CMakeLists.txt  dns_server.cpp  wifi_connection.cpp
main/include/: LGFX_Setup.hpp  PID.h  thermal_control.h  ui_manager.h  wifi_connection.h  wifi_server.h
(+2320 files in other folders)
