[package]
name = "slint_ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
slint = { version = "=1.15.1", default-features = false, features = ["renderer-software", "unsafe-single-threaded", "compat-1-2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
qrcodegen = "1.8"

[build-dependencies]
slint-build = "=1.15.1"

[features]
preview = ["slint/std", "slint/backend-winit", "slint/renderer-software", "chrono"]

[[bin]]
name = "preview"
path = "src/bin/preview.rs"
required-features = ["preview"]

[profile.release]
panic = "abort"
debug = 0

[profile.release.build-override]
# Build scripts (slint-build/i-slint-compiler) can be huge on Windows; disable debuginfo to avoid LNK1140.
debug = 0

[profile.dev]
panic = "abort"
debug = 0

[profile.dev.build-override]
debug = 0
